--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "angular": "~1.2.18",
     "angular-route": "~1.2.18",
     "angular-mocks": "~1.2.18",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "bootstrap": "~3.3.1",
+    "jquery": "~2.1.1"
   }
 }
